Ensure the logo and site title are center aligned

--- a/style.less
+++ b/style.less
@@ -444,6 +444,7 @@ body {
 		}
 
 		.logo {
+			align-items: center;
 			display: flex;
 			padding: 10px 0;
 			margin-right: 15px;
